test/MC/SVE/regression-tests/negative_tests/sve-ld1sb-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS16CLoad1LSSZ
// Offset register Rm cannot be xzr
ld1sb z8.h, p5/z, [x8, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
